fixed comment bar alignment on snp

--- a/public/styles.css
+++ b/public/styles.css
@@ -1210,7 +1210,6 @@ select {
 
 .photo-comment-box-child {
   margin-top: 15px;
-  text-align: center;
 }
 
 .write-button {
